--- a/P003121.opf/meta.yml
+++ b/P003121.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W22098
   title: ཀུན་མཁྱེན་འཇམ་དབྱངས་བཞད་པ་སྐུ་འཕྲེང་གསུམ་པའི་རྣམ་ཐར
   author: ''
-  volumes: {}
+  volumes:
+    2bbc482c7cc340c587055b3429f27f64:
+      image_group_id: I4223
+      title: ''
+      volume_number: 1
+      total_pages: 407
