--- a/P003121.opf/layers/v001/Pagination.yml
+++ b/P003121.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 95653f062b704d4fbfb4a5af48ca3d34
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   77ef26b35f764119b7e663e32e12e149:
