--- a/P003121.opf/meta.yml
+++ b/P003121.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P003121
 initial_creation_type: ocr
+created_at: 27/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W22098
   title: ཀུན་མཁྱེན་འཇམ་དབྱངས་བཞད་པ་སྐུ་འཕྲེང་གསུམ་པའི་རྣམ་ཐར
