--- a/P003121.opf/meta.yml
+++ b/P003121.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P003121
 initial_creation_type: ocr
 created_at: 27/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:41:40.892631
 source_metadata:
   id: bdr:W22098
   title: ཀུན་མཁྱེན་འཇམ་དབྱངས་བཞད་པ་སྐུ་འཕྲེང་གསུམ་པའི་རྣམ་ཐར
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 407
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
